# log_parser

./: .dir-locals.el  .gitignore  Dockerfile  LogDataTypes.hs  LogParser.hs  log_parser.hs
parser/: LogParser.hs  parser.cabal  stack.yaml
parser/app/: Main.hs
parser/src/: LogParser.hs
parser/test/: Spec.hs
