name:                parser
version:             0.1.0.0
synopsis:            Apache logfile parser
description:         Please see README.md
homepage:            https://github.com/garry-cairns/log_parser
license:             BSD3
license-file:        LICENSE
author:              Garry Cairns
maintainer:          garryjcairns@gmail.com
copyright:           2015 Garry Cairns
category:            Executable
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LogParser
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , old-locale
                     , time
  default-language:    Haskell2010

executable parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , old-locale
                     , time
                     , parser
  default-language:    Haskell2010

test-suite parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , hspec
                     , old-locale
                     , time
                     , parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/garry-cairns/log_parser
